logs/job_1088.err
  File "/home/ihubnvidia20/vqe.py", line 38
    multiplicity=mol_entry.get("multiplicity", 1),
    ^
SyntaxError: invalid syntax
